[tool.poetry]
name = "remarkable-firefox"
version = "0.1.0"
description = ""
authors = ["Werts Kendall (ext) USRE <kendall.werts@syngenta.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
jwcrypto = "^1.5.1"
requests = "^2.31.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
